# PilotAssessmentReader

./: .env.example  .gitignore  README.md  app.py  document_generator.py  pyproject.toml
samples/: querys.md
src/common/: config.py  digest.py  embeddings.py  faiss_io.py  io.py  llm_extract.py  tools.py  vectors.py
src/process/: graph.py  ingest.py  run.py
